src/components/Project/Project.module.scss
@use "../../partials/variables" as v;

.project {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.8);
  font-family: "Roboto";
  user-select: none;

  &:hover {
    .inner-content {
      background-color: rgba(v.$primary-color-dark-shade, 0.95);

      > * {
        opacity: 1;
      }
    }
  }
}

.inner-content {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  background-color: rgba(v.$primary-color-dark-shade, 0);
  color: v.$secondary-color-two;

  transition: background-color 500ms ease;

  > * {
    opacity: 0;
    transition: opacity 500ms ease;
  }
}

.project-image {
  width: 100%;
  height: 300px;
}

.icon {
  font-size: 2.5rem;
}

